--- a/Chelo Tasnim Haryono_Website/styles/dashboard.css
+++ b/Chelo Tasnim Haryono_Website/styles/dashboard.css
@@ -228,6 +228,34 @@ nav {
     display: flex;
 }
 
+.nav-item {
+    display: flex;
+    align-items: center;
+    gap: 48px;
+}
+
+.nav-item a {
+    position: relative;
+    font-size: 14px;
+    color: var(--normal-text);
+}
+
+.nav-item a:hover {
+    color: var(--primary-green);
+}
+
+.nav-item a:hover::after {
+    position: absolute;
+    content: '';
+    bottom: -14px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 6px;
+    height: 6px;
+    border-radius: 25%;
+    background: var(--high-green);
+}
+
 .nav-content .fav-mark,
 .hamburger-menu {
     position: relative;
@@ -253,6 +281,10 @@ nav {
 
 .nav-action .btn-group {
     padding-left: 28px;
+}
+
+.detail-nav .btn-group {
+    padding-left: 0;
 }
 
 .btn {
@@ -622,6 +654,7 @@ nav {
 .box-content .main {
     padding-bottom: 8px;
     border-bottom: 1px solid var(--fade-2);
+    cursor: pointer;
 }
 
 .box li {
@@ -660,6 +693,155 @@ nav {
     opacity: .6;
 }
 
+.detail-container {
+    position: relative;
+    padding: 175px 18vw;
+    color: var(--normal-text);
+}
+
+.detail-header {
+    position: relative;
+    display: flex;
+    width: 100%;
+    gap: 48px;
+}
+
+.detail-header .logo {
+    max-width: 175px;
+    height: 175px;
+    padding: 0 32px;
+    box-shadow:
+        0 0 3px rgba(0, 0, 0, .05),
+        5px 5px 15px rgba(0, 0, 0, .05);
+}
+
+.detail-header .typo {
+    position: relative;
+    width: 100%;
+}
+
+.detail-header img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.detail-header h2 {
+    margin-bottom: 5px;
+    font-weight: 600;
+    font-size: 24px;
+}
+
+.detail-header span {
+    display: block;
+    margin-top: 16px;
+    margin-bottom: 20px;
+    font-size: 14px;
+}
+
+.common-detail {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    padding: 20px 0 24px;
+    border-top: 2px solid var(--super-fade);
+    border-bottom: 2px solid var(--super-fade);
+    gap: 24px;
+}
+
+.common {
+    min-width: 200px;
+    font-size: 14px;
+}
+
+.common label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: 600;
+    font-size: 12px;
+    color: var(--thick-text);
+}
+
+.detail-header .typo .btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 8px 20px;
+    font-size: 12px;
+}
+
+.detail-more {
+    padding: 24px 0 28px;
+    padding-left: 223px;
+}
+
+.detail-part {
+    margin-bottom: 32px;
+    line-height: 26px;
+    font-size: 14px;
+}
+
+.detail-part label {
+    display: block;
+    margin-bottom: 8px;
+    font-weight: 600;
+    color: var(--thick-text);
+}
+
+.detail-part ul {
+    margin-left: 16px;
+}
+
+.about-company {
+    padding: 24px 32px 48px;
+    margin-top: 32px;
+    box-shadow:
+        0 0 3px rgba(0, 0, 0, .05),
+        5px 5px 15px rgba(0, 0, 0, .05);
+    line-height: 24px;
+    font-size: 13px;
+}
+
+.about-company span {
+    font-weight: 500;
+    font-size: 14px;
+}
+
+.about-company h2 {
+    margin: 0 0 14px;
+    font-size: 20px;
+}
+
+.is-detail {
+    transition: .1s;
+}
+
+body.focus-mode .detail-container:hover .is-detail {
+    filter: blur(3px);
+}
+
+body.focus-mode .detail-container .is-detail:hover {
+    filter: blur(0);
+}
+
+.blur-first .is-detail {
+    filter: blur(3px);
+}
+
+.focus-mode-btn {
+    position: fixed;
+    bottom: 64px;
+    right: 80px;
+    padding: 8px 8px 2px;
+    font-size: 24px;
+    z-index: 1000;
+}
+
+.focus-mode .focus-mode-btn {
+    background: var(--primary-green);
+    color: rgb(255, 255, 255);
+}
+
 @media(max-width: 1100px) {
 
     .nav-header,
@@ -667,6 +849,10 @@ nav {
     .dashboard {
         padding-left: 48px;
         padding-right: 48px;
+    }
+
+    .detail-container {
+        padding: 175px 10vw;
     }
 }
 
@@ -680,8 +866,19 @@ nav {
         font-size: 12px;
     }
 
+    .btn.focus-mode-btn {
+        bottom: 32px;
+        right: 38px;
+        padding: 8px 8px 2px;
+        font-size: 24px;
+    }
+
     .nav-label {
         display: none;
+    }
+
+    .detail-nav .nav-label {
+        display: block;
     }
 
     #filter {
@@ -709,6 +906,21 @@ nav {
     }
 }
 
+@media(max-width: 900px) {
+    .detail-container {
+        padding: 175px 48px;
+    }
+
+    .detail-nav .nav-item {
+        display: none;
+    }
+
+    .detail-nav .hamburger-menu {
+        display: block;
+        padding-right: 24px !important;
+    }
+}
+
 @media(max-width: 800px) {
     nav .btn-group {
         display: none;
@@ -728,6 +940,31 @@ nav {
 
     .other-nav {
         display: none;
+    }
+
+    .detail-nav .hamburger-menu {
+        padding-right: 0 !important;
+    }
+
+    .detail-container {
+        padding-top: 150px;
+    }
+
+    .detail-header {
+        flex-direction: column;
+        font-size: 14px;
+    }
+
+    .detail-header h2 {
+        font-size: 20px;
+    }
+
+    .detail-header span {
+        font-size: 12px;
+    }
+
+    .detail-more {
+        padding-left: 0;
     }
 }
 
@@ -780,10 +1017,32 @@ nav {
         line-height: 24px;
         font-size: 16px;
     }
+
+    .detail-container {
+        padding: 150px 24px;
+    }
+
+    .common {
+        min-width: 175px;
+    }
+
+    .focus-mode-btn {
+        display: none;
+    }
 }
 
 @media(max-width: 450px) {
     .box {
         flex-direction: column;
+    }
+
+    .detail-header span {
+        margin-bottom: 85px;
+    }
+
+    .detail-header .btn {
+        top: 100px !important;
+        left: 0;
+        width: max-content;
     }
 }
